src/objects/User_Authorisation__c.object
<CustomObject>
    <fields>
        <fullName>CreatedDateUnitTest__c</fullName>
        <description>This field is used only for unit testing the UserAuthenticationRecordsDeletionBatch</description>
        <inlineHelpText>This field is used only for unit testing the UserAuthenticationRecordsDeletionBatch</inlineHelpText>
        <label>CreatedDateUnitTest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiry_Time__c</fullName>
        <label>Expiry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nonce__c</fullName>
        <label>Nonce</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Access_Token__c</fullName>
        <label>User Access Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>User Authorisation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UAUTH{000000}</displayFormat>
        <label>User Authorisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Authorisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>